@@ -32,8 +32,6 @@
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
  *
- * $Id: ValueMarkerTests.java,v 1.1.2.1 2006/10/03 15:41:25 mungady Exp $
- *
  * Changes
  * -------
  * 18-Aug-2003 : Version 1 (DG);
@@ -42,7 +40,8 @@
  * 05-Sep-2006 : Added checks for MarkerChangeEvent generation (DG);
  * 20-Jun-2007 : Removed JCommon dependencies (DG);
  * 26-Sep-2007 : Added test1802195() method (DG);
- * 
+ * 08-Oct-2007 : Added test1808376() method (DG);
+ *
  */
 
 package org.jfree.chart.plot.junit;
@@ -51,6 +50,7 @@ import java.awt.BasicStroke;
 import java.awt.Color;
 import java.awt.Font;
 import java.awt.GradientPaint;
+import java.awt.Stroke;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.ObjectInput;
@@ -246,7 +246,7 @@ public class ValueMarkerTests
     public void markerChanged(MarkerChangeEvent event) {
         this.lastEvent = event;
     }
-    
+
     /**
      * A test for bug 1802195.
      */
@@ -281,6 +281,22 @@ public class ValueMarkerTests
         }
         assertTrue(pass);
 
+    }
+
+    /**
+     * A test for bug report 1808376.
+     */
+    public void test1808376() {
+        Stroke stroke = new BasicStroke(1.0f);
+        Stroke outlineStroke = new BasicStroke(2.0f);
+        ValueMarker m = new ValueMarker(1.0, Color.red, stroke, Color.blue, 
+                outlineStroke, 0.5f);
+        assertEquals(1.0, m.getValue(), EPSILON);
+        assertEquals(Color.red, m.getPaint());
+        assertEquals(stroke, m.getStroke());
+        assertEquals(Color.blue, m.getOutlinePaint());
+        assertEquals(outlineStroke, m.getOutlineStroke());
+        assertEquals(0.5f, m.getAlpha(), EPSILON);
     }
 
 }
